fix: overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,7 @@ html {
 body {
   background: #000311;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 
